<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".BuatPesananActivity">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_marginBottom="20dp"/>


    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255">

        <TableLayout
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/StaticFoodName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/white"
                    android:ems="10"
                    android:paddingBottom="10dp"
                    android:text="@string/food_name" />

                <TextView
                    android:id="@+id/food_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:lineSpacingMultiplier="2"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/white"
                    android:maxLines="20"
                    android:paddingBottom="10dp"
                    android:singleLine="false"
                    android:text="@string/textview" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/StaticFoodPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/white"
                    android:ems="10"
                    android:paddingBottom="10dp"
                    android:text="@string/food_price" />

                <TextView
                    android:id="@+id/food_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/white"
                    android:ems="10"
                    android:paddingBottom="10dp"
                    android:text="@string/textview" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/StaticPaymentMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/white"
                    android:paddingBottom="10dp"
                    android:text="@string/payment_method" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/cash"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:fontFamily="@font/bold"
                        android:textColor="@color/white"
                        android:text="@string/via_cash" />

                    <RadioButton
                        android:id="@+id/cashless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:textColor="@color/white"
                        android:text="@string/via_cashless" />
                </RadioGroup>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/textCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/white"
                    android:ems="10"
                    android:paddingBottom="10dp"
                    android:text="@string/promo_code" />

                <EditText
                    android:id="@+id/promo_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/white"
                    android:ems="10"
                    android:hint="promo"
                    android:textColorHint="@color/white"
                    android:inputType="textPersonName"
                    android:paddingBottom="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/staticTotalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/white"
                    android:ems="10"
                    android:paddingBottom="10dp"
                    android:text="@string/total_price" />

                <TextView
                    android:id="@+id/total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:ems="10"
                    android:hint="@string/harga"
                    android:paddingBottom="10dp" />
            </TableRow>


        </TableLayout>


    </RelativeLayout>


    <Button
        android:id="@+id/hitung"
        android:layout_width="308dp"
        android:layout_height="43dp"
        android:layout_marginTop="564dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/buttonorder"
        android:fontFamily="@font/bold"
        android:text="@string/count"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pesan"
        android:layout_width="308dp"
        android:layout_height="43dp"
        android:layout_marginTop="564dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/buttonorder"
        android:fontFamily="@font/bold"
        android:text="@string/order"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819" />

</androidx.constraintlayout.widget.ConstraintLayout>