<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_marginBottom="20dp"/>

    <ScrollView
        android:layout_width="411dp"
        android:layout_height="499dp"
        android:background="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:id="@+id/linearLayout2"
            android:layout_width="467dp"
            android:layout_height="500dp"
            android:gravity="center"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.285"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.307">

            <TableLayout
                android:layout_width="341dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/staticIdInvoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/bold"
                        android:paddingBottom="10dp"
                        android:text="@string/id_invoice"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/idInvoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/bold"
                        android:paddingBottom="10dp"
                        android:text="@string/textview"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/staticNamaCustomer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/bold"
                        android:paddingBottom="10dp"
                        android:text="@string/nama_customer"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/namaCustomer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/bold"
                        android:paddingBottom="10dp"
                        android:text="@string/textview"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="19dp"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/staticNamaMakanan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:paddingBottom="10dp"
                        android:text="@string/makanan"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/namaMakanan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:lineSpacingMultiplier="2"
                        android:maxLines="20"
                        android:paddingBottom="10dp"
                        android:singleLine="false"
                        android:text="@string/textview"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/staticHargaMakanan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:paddingBottom="10dp"
                        android:text="Harga Makanan:"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/FOODPRICE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:paddingBottom="10dp"
                        android:text="@string/textview"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/staticTanggalPesan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:paddingBottom="10dp"
                        android:text="@string/tanggal_pesan"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tanggalPesan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:paddingBottom="10dp"
                        android:text="@string/textview"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/staticDeliveryFee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:paddingBottom="10dp"
                        android:text="Delivery Fee:"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/DeliveryFee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:paddingBottom="10dp"
                        android:text="@string/textview"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/staticStatusInvoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:paddingBottom="10dp"
                        android:text="@string/status_invoice"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/statusInvoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:paddingBottom="10dp"
                        android:text="@string/textview"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/staticTipeInvoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:paddingBottom="10dp"
                        android:text="@string/tipe_invoice"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tipeInvoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:paddingBottom="10dp"
                        android:text="@string/textview"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/staticPromoCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:paddingBottom="10dp"
                        android:text="Promo Code:"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/promo_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:paddingBottom="10dp"
                        android:text="@string/textview"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/staticTotalPrice"
                        android:layout_width="91dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:paddingBottom="10dp"
                        android:text="@string/total_biaya"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/totalBiaya"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:paddingBottom="10dp"
                        android:text="@string/textview"
                        android:textColor="@color/white" />
                </TableRow>
            </TableLayout>

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/batal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/buttonorder"
        android:fontFamily="@font/bold"
        android:text="@string/batal"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/selesai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/buttonorder"
        android:fontFamily="@font/bold"
        android:text="@string/selesai"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.992"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />



</androidx.constraintlayout.widget.ConstraintLayout>